fix youtube icon and navbar spacing

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -14,6 +14,10 @@ body {
   color: #fff !important;
 }
 
+.navbar .nav-item + .nav-item {
+  margin-left: 0.5rem;
+}
+
 .navbar .nav-link {
   color: #fff !important;
   border: 1px solid rgba(255, 255, 255, 0.6);
